--- a/wallpapers/CMakeLists.txt
+++ b/wallpapers/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Marco Martin <mart@kde.org>
+# SPDX-License-Identifier: BSD-2-Clause
 
 add_subdirectory(image)
 plasma_install_package(color org.kde.color wallpapers wallpaper)
