--- a/wallpapers/image/plugin/autotests/testdata/default/FEATURE207976-dark-wallpaper/metadata.desktop
+++ b/wallpapers/image/plugin/autotests/testdata/default/FEATURE207976-dark-wallpaper/metadata.desktop
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Fushan Wen <qydwhotmail@gmail.com>
+# SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Name=Dark Wallpaper (For test purpose, don't translate!)
 
