--- a/runners/locations/autotests/CMakeLists.txt
+++ b/runners/locations/autotests/CMakeLists.txt
@@ -1,2 +1,2 @@
-ecm_add_test(locationsrunnertest.cpp TEST_NAME locationsrunnertest LINK_LIBRARIES Qt::Test KF5::Runner KF5::KIOCore)
+ecm_add_test(locationsrunnertest.cpp TEST_NAME locationsrunnertest LINK_LIBRARIES Qt::Test Qt::Gui KF5::Runner KF5::KIOCore)
 configure_krunner_test(locationsrunnertest locations)
