--- a/runners/shell/autotests/CMakeLists.txt
+++ b/runners/shell/autotests/CMakeLists.txt
@@ -2,5 +2,5 @@
 # SPDX-FileCopyrightText: 2021 Alexander Lohnau <alexander.lonau@gmx.de>
 include(ECMAddTests)
 
-ecm_add_test(shellrunnertest.cpp TEST_NAME shellrunnertest  LINK_LIBRARIES Qt::Test KF5::Runner)
+ecm_add_test(shellrunnertest.cpp TEST_NAME shellrunnertest  LINK_LIBRARIES Qt::Test Qt::Gui KF5::Runner)
 configure_krunner_test(shellrunnertest krunner_shell)
