shell: install update executable to `${KDE_INSTALL_LIBDIR}/kconf_update_bin/`
According to ubuntu packaging policies, data dir should not contain arch-dependent binaries.

--- a/shell/kconf_update/CMakeLists.txt
+++ b/shell/kconf_update/CMakeLists.txt
@@ -6,4 +6,4 @@ target_sources(plasmashell-5.27-use-panel-thickness-in-default-group PRIVATE pla
 target_link_libraries(plasmashell-5.27-use-panel-thickness-in-default-group PRIVATE KF5::ConfigCore)
 
 install(FILES plasmashell-5.27-use-panel-thickness-in-default-group.upd DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
-install(TARGETS plasmashell-5.27-use-panel-thickness-in-default-group DESTINATION ${KDE_INSTALL_KCONFUPDATEDIR})
+install(TARGETS plasmashell-5.27-use-panel-thickness-in-default-group DESTINATION ${KDE_INSTALL_LIBDIR}/kconf_update_bin/)
