--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -56,6 +56,7 @@ Dependencies:
     'plasma/kwin': '@same'
     'plasma/libksysguard': '@same'
     'plasma/kpipewire': '@same'
+    'plasma/plasma-nano': '@same'
     'libraries/plasma-wayland-protocols': '@latest'
     'libraries/kuserfeedback': '@stable'
     'graphics/libkexiv2': '@latest'
