plasma-windowed: export `PlasmaWindowedView` and `PlasmaWindowedCorona`
Will be used in plasmoid tests

--- a/plasma-windowed/CMakeLists.txt
+++ b/plasma-windowed/CMakeLists.txt
@@ -1,11 +1,44 @@
 add_definitions("-DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII")
 add_definitions(-DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT)
 
-set(plasmawindowed-app_SRCS
+# For plasmoid tests, unstable library
+set(plasmawindowed-lib_SRCS
     plasmawindowedcorona.cpp
     plasmawindowedview.cpp
-    plasmawindowedcorona.h
-    plasmawindowedview.h
+)
+add_library(plasmawindowed_plugin SHARED ${plasmawindowed-lib_SRCS})
+add_library(PW::PlasmaWindowed ALIAS plasmawindowed_plugin)
+set_target_properties(plasmawindowed_plugin PROPERTIES
+    VERSION ${PROJECT_VERSION}
+    SOVERSION 1
+    EXPORT_NAME PlasmaWindowed
+)
+target_link_libraries(plasmawindowed_plugin
+    PUBLIC
+        Qt::Core
+        Qt::Quick
+        KF5::Plasma
+    PRIVATE
+        Qt::Qml
+        KF5::I18n
+        KF5::IconThemes
+        KF5::XmlGui
+        KF5::PlasmaQuick
+        KF5::Notifications
+        KF5::Package
+)
+target_include_directories(plasmawindowed_plugin
+    PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+    INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}>"
+)
+ecm_generate_export_header(plasmawindowed_plugin
+    EXPORT_FILE_NAME plasmawindowed_plugin_export.h
+    BASE_NAME PlasmaWindowed
+    GROUP_BASE_NAME PW
+    VERSION ${PROJECT_VERSION}
+)
+
+set(plasmawindowed-app_SRCS
     main.cpp
 )
 
@@ -13,17 +46,10 @@ add_executable(plasmawindowed ${plasmawindowed-app_SRCS})
 
 target_link_libraries(
     plasmawindowed
+    PW::PlasmaWindowed
     Qt::Widgets
-    Qt::Quick
-    Qt::Qml
-    KF5::I18n
-    KF5::IconThemes
-    KF5::XmlGui
-    KF5::PlasmaQuick
-    KF5::Plasma
     KF5::DBusAddons
-    KF5::Notifications
-    KF5::Package
+    KF5::I18n
 )
 
 install(TARGETS plasmawindowed ${KDE_INSTALL_TARGETS_DEFAULT_ARGS})
