libtaskmanager: test xwindowtasksmodel data
Test the model can return the correct data stored under the given role,
and can emit signals when some data changes like title, icon and
geometry.

--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -5,5 +5,5 @@ ecm_add_tests(
     tasksmodeltest.cpp
     launchertasksmodeltest.cpp
     xwindowtasksmodeltest.cpp
-    LINK_LIBRARIES taskmanager Qt::Test KF5::Service KF5::IconThemes KF5::ConfigCore KF5::WindowSystem
+    LINK_LIBRARIES taskmanager Qt::Test KF5::Activities KF5::Service KF5::IconThemes KF5::ConfigCore KF5::WindowSystem
 )
