libtaskmanager: test reading data from desktop file in `XWindowTasksModel`
(cherry picked from commit fe7ed1ca40611fa5e2f8b7e6c578d7b46736c173)

--- a/libtaskmanager/autotests/CMakeLists.txt
+++ b/libtaskmanager/autotests/CMakeLists.txt
@@ -1,5 +1,15 @@
 include(ECMAddTests)
 
+set(samplewidgetwindowExecutablePath ${CMAKE_BINARY_DIR}/bin/samplewidgetwindow)
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/windows/samplewidgetwindow.h.in
+    ${CMAKE_BINARY_DIR}/samplewidgetwindow.h
+    @ONLY
+)
+set(samplewidgetwindow_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/data/windows/samplewidgetwindow.cpp)
+add_executable(samplewidgetwindow ${samplewidgetwindow_SOURCES})
+target_link_libraries(samplewidgetwindow Qt::Core Qt::Gui)
+
 ecm_add_tests(
     tasktoolstest.cpp
     tasksmodeltest.cpp
