Add missing kwayland CI dep

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -50,6 +50,7 @@ Dependencies:
     'frameworks/kdesu': '@latest'
     'frameworks/kpeople': '@latest'
     'frameworks/prison': '@latest'
+    'frameworks/kwayland': '@latest'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
