kcms/cursortheme: migrate docbook for cursor theme and launch feedback from plasma-desktop

--- a/doc/kcontrol/CMakeLists.txt
+++ b/doc/kcontrol/CMakeLists.txt
@@ -5,6 +5,7 @@ ecm_optional_add_subdirectory(icons)
 ecm_optional_add_subdirectory(screenlocker)
 ecm_optional_add_subdirectory(translations)
 ecm_optional_add_subdirectory(colors)
+ecm_optional_add_subdirectory(cursortheme)
 ecm_optional_add_subdirectory(fontinst)
 ecm_optional_add_subdirectory(fonts)
 ecm_optional_add_subdirectory(kcmstyle)
