Revert "Revert "require selenium""
This reverts commit c38b4982acf6b19de474d20c21713d45d121536a

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -66,3 +66,4 @@ Dependencies:
   'require':
     'frameworks/networkmanager-qt': '@latest'
     'libraries/polkit-qt-1': '@latest'
+    'sdk/selenium-webdriver-at-spi': '@latest'
