Add a test for the logout greeter
appium test for the logout greeter, introduce an environment variable
PLASMA_SESSION_GUI_TEST used during the test

--- a/appiumtests/CMakeLists.txt
+++ b/appiumtests/CMakeLists.txt
@@ -25,4 +25,11 @@ add_test(
     NAME digitalclocktest
     COMMAND selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/digitalclocktest.py
 )
-set_tests_properties(digitalclocktest PROPERTIES TIMEOUT 300 ENVIRONMENT "TEST_WITH_KWIN_WAYLAND=1")
+set_tests_properties(digitalclocktest PROPERTIES TIMEOUT 300)
+
+add_test(
+    NAME logoutgreetertest
+    COMMAND dbus-launch selenium-webdriver-at-spi-run ${CMAKE_CURRENT_SOURCE_DIR}/logoutgreetertest.py ${KDE_INSTALL_LIBEXECDIR}
+)
+set_tests_properties(logoutgreetertest PROPERTIES TIMEOUT 300 ENVIRONMENT "PLASMA_SESSION_GUI_TEST=1")
+
