Require passing tests in Plasma/5.27 builds
Since 5.27 is LTS, it's necessary to require passing all tests, but
some tests are failing forever, so skip them for now.

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -66,3 +66,6 @@ Dependencies:
     'frameworks/networkmanager-qt': '@latest'
     'libraries/polkit-qt-1': '@latest'
     'sdk/selenium-webdriver-at-spi': '@latest'
+
+Options:
+  require-passing-tests-on: ['@all']
