klipper: call wl_display_roundtrip in Ignore's dtor
To avoid the same clipboard item being recreated on Wayland.

CCBUG: 464828
CCBUG: 465225
CCBUG: 465326
CCBUG: 465603

--- a/klipper/CMakeLists.txt
+++ b/klipper/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(libklipper_common_static STATIC ${libklipper_common_SRCS})
 set_property(TARGET libklipper_common_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(libklipper_common_static
     Qt::Concurrent
+    Qt::GuiPrivate
     Qt::Widgets
     Qt::DBus
     KF5::ConfigGui
@@ -49,7 +50,9 @@ target_link_libraries(libklipper_common_static
     KF5::XmlGui
     KF5::WaylandClient
     KF5::IconThemes
-    ${ZLIB_LIBRARY})
+    ${ZLIB_LIBRARY}
+    Wayland::Client
+)
 
 if (HAVE_X11)
     target_link_libraries(libklipper_common_static XCB::XCB)
