Migrate session action shortcuts out of ksmserver
As part of a mission to make ksmserver only about X11 session
management, this patch splits the session actions out of ksmserver.

Making ksmserver optional at runtime is a pre-requisite for making
xwayland only load on demand.

This patch uses kglobalaccel's ability to load actions directly from a
desktop file.

--- a/startkde/CMakeLists.txt
+++ b/startkde/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(plasmaautostart)
 add_subdirectory(kcminit)
 add_subdirectory(waitforname)
+add_subdirectory(sessionactions)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     add_subdirectory(systemd)
