applets/kicker: Add section model
Needed for https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1317

--- a/applets/kicker/CMakeLists.txt
+++ b/applets/kicker/CMakeLists.txt
@@ -40,6 +40,7 @@ set(kickerplugin_SRCS
     plugin/wheelinterceptor.cpp
     plugin/windowsystem.cpp
     plugin/funnelmodel.cpp
+    plugin/sectionsmodel.cpp
     plugin/kickercompattrianglemousefilter.cpp
     ../../components/trianglemousefilter/trianglemousefilter.cpp
 )
