kcms/region_language: update environment when applying settings
So no need to log out and log in to apply a new language.

--- a/kcms/region_language/CMakeLists.txt
+++ b/kcms/region_language/CMakeLists.txt
@@ -72,6 +72,7 @@ target_link_libraries(kcm_regionandlang
     KF6::KCMUtils
     KF6::KCMUtilsQuick
     KF6::ItemModels
+    PW::KWorkspace
     Qt::Core5Compat
 )
 if(UBUNTU_LOCALE)
