kcms/region_language: rename `plasma-localerc` to `plasmalocalerc`
plasma-localerc can't be used as an object name because the minus sign
is not accepted by DBus specification, thus the KCM can't notify changes
through DBus.

--- a/kcms/region_language/CMakeLists.txt
+++ b/kcms/region_language/CMakeLists.txt
@@ -88,3 +88,5 @@ kpackage_install_package(package kcm_regionandlang kcms)
 if(BUILD_TESTING)
     add_subdirectory(autotests)
 endif()
+
+add_subdirectory(kconf_update)
