Use krunner_configure_test function instead of configure_krunner_test
The latter is removed in KF6

--- a/runners/calculator/autotests/CMakeLists.txt
+++ b/runners/calculator/autotests/CMakeLists.txt
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: BSD-2-Clause
 
 ecm_add_test(calculatorrunnertest.cpp TEST_NAME calculatorrunnertest LINK_LIBRARIES Qt::Test Qt::Gui KF5::Runner KF5::KIOCore PkgConfig::QALCULATE)
-configure_krunner_test(calculatorrunnertest calculator)
+krunner_configure_test(calculatorrunnertest calculator)
