--- a/runners/shell/autotests/CMakeLists.txt
+++ b/runners/shell/autotests/CMakeLists.txt
@@ -3,4 +3,4 @@
 include(ECMAddTests)
 
 ecm_add_test(shellrunnertest.cpp TEST_NAME shellrunnertest  LINK_LIBRARIES Qt::Test Qt::Gui KF5::Runner)
-configure_krunner_test(shellrunnertest krunner_shell)
+krunner_configure_test(shellrunnertest krunner_shell)
