Use KF6 libs on CI

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -4,53 +4,53 @@
 Dependencies:
 - 'on': ['@all']
   'require':
-    'frameworks/attica': '@latest'
-    'frameworks/baloo': '@latest'
-    'frameworks/extra-cmake-modules': '@latest'
-    'frameworks/kactivities': '@latest'
-    'frameworks/kactivities-stats': '@latest'
-    'frameworks/kauth': '@latest'
-    'frameworks/kbookmarks': '@latest'
-    'frameworks/kcmutils': '@latest'
-    'frameworks/kcodecs': '@latest'
-    'frameworks/kcompletion': '@latest'
-    'frameworks/kconfig': '@latest'
-    'frameworks/kconfigwidgets': '@latest'
-    'frameworks/kcoreaddons': '@latest'
-    'frameworks/kcrash': '@latest'
-    'frameworks/kdbusaddons': '@latest'
-    'frameworks/kdeclarative': '@latest'
-    'frameworks/kfilemetadata': '@latest'
-    'frameworks/kglobalaccel': '@latest'
-    'frameworks/kguiaddons': '@latest'
-    'frameworks/ki18n': '@latest'
-    'frameworks/kiconthemes': '@latest'
-    'frameworks/kio': '@latest'
-    'frameworks/kitemmodels': '@latest'
-    'frameworks/kitemviews': '@latest'
-    'frameworks/kjobwidgets': '@latest'
-    'frameworks/knewstuff': '@latest'
-    'frameworks/knotifications': '@latest'
-    'frameworks/knotifyconfig': '@latest'
-    'frameworks/kpackage': '@latest'
-    'frameworks/kparts': '@latest'
-    'frameworks/krunner': '@latest'
-    'frameworks/kservice': '@latest'
-    'frameworks/ktextwidgets': '@latest'
-    'frameworks/kwallet': '@latest'
-    'frameworks/kwidgetsaddons': '@latest'
-    'frameworks/kwindowsystem': '@latest'
-    'frameworks/kxmlgui': '@latest'
-    'frameworks/plasma-framework': '@latest'
-    'frameworks/solid': '@latest'
-    'frameworks/sonnet': '@latest'
-    'frameworks/kholidays': '@latest'
-    'frameworks/kquickcharts': '@latest'
-    'frameworks/kded': '@latest'
-    'frameworks/kdesu': '@latest'
-    'frameworks/kpeople': '@latest'
-    'frameworks/prison': '@latest'
-    'frameworks/kwayland': '@latest'
+    'frameworks/attica': '@latest-kf6'
+    'frameworks/baloo': '@latest-kf6'
+    'frameworks/extra-cmake-modules': '@latest-kf6'
+    'frameworks/kactivities': '@latest-kf6'
+    'frameworks/kactivities-stats': '@latest-kf6'
+    'frameworks/kauth': '@latest-kf6'
+    'frameworks/kbookmarks': '@latest-kf6'
+    'frameworks/kcmutils': '@latest-kf6'
+    'frameworks/kcodecs': '@latest-kf6'
+    'frameworks/kcompletion': '@latest-kf6'
+    'frameworks/kconfig': '@latest-kf6'
+    'frameworks/kconfigwidgets': '@latest-kf6'
+    'frameworks/kcoreaddons': '@latest-kf6'
+    'frameworks/kcrash': '@latest-kf6'
+    'frameworks/kdbusaddons': '@latest-kf6'
+    'frameworks/kdeclarative': '@latest-kf6'
+    'frameworks/kfilemetadata': '@latest-kf6'
+    'frameworks/kglobalaccel': '@latest-kf6'
+    'frameworks/kguiaddons': '@latest-kf6'
+    'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kiconthemes': '@latest-kf6'
+    'frameworks/kio': '@latest-kf6'
+    'frameworks/kitemmodels': '@latest-kf6'
+    'frameworks/kitemviews': '@latest-kf6'
+    'frameworks/kjobwidgets': '@latest-kf6'
+    'frameworks/knewstuff': '@latest-kf6'
+    'frameworks/knotifications': '@latest-kf6'
+    'frameworks/knotifyconfig': '@latest-kf6'
+    'frameworks/kpackage': '@latest-kf6'
+    'frameworks/kparts': '@latest-kf6'
+    'frameworks/krunner': '@latest-kf6'
+    'frameworks/kservice': '@latest-kf6'
+    'frameworks/ktextwidgets': '@latest-kf6'
+    'frameworks/kwallet': '@latest-kf6'
+    'frameworks/kwidgetsaddons': '@latest-kf6'
+    'frameworks/kwindowsystem': '@latest-kf6'
+    'frameworks/kxmlgui': '@latest-kf6'
+    'frameworks/plasma-framework': '@latest-kf6'
+    'frameworks/solid': '@latest-kf6'
+    'frameworks/sonnet': '@latest-kf6'
+    'frameworks/kholidays': '@latest-kf6'
+    'frameworks/kquickcharts': '@latest-kf6'
+    'frameworks/kded': '@latest-kf6'
+    'frameworks/kdesu': '@latest-kf6'
+    'frameworks/kpeople': '@latest-kf6'
+    'frameworks/prison': '@latest-kf6'
+    'frameworks/kwayland': '@latest-kf6'
     'plasma/layer-shell-qt': '@same'
     'plasma/kscreenlocker': '@same'
     'plasma/libkscreen': '@same'
@@ -58,12 +58,12 @@ Dependencies:
     'plasma/libksysguard': '@same'
     'plasma/kpipewire': '@same'
     'plasma/plasma-nano': '@same'
-    'libraries/plasma-wayland-protocols': '@latest'
+    'libraries/plasma-wayland-protocols': '@latest-kf6'
     'libraries/kuserfeedback': '@stable'
-    'graphics/libkexiv2': '@latest'
+    'graphics/libkexiv2': '@latest-kf6'
 
 - 'on': ['Linux']
   'require':
-    'frameworks/networkmanager-qt': '@latest'
-    'libraries/polkit-qt-1': '@latest'
-    'sdk/selenium-webdriver-at-spi': '@latest'
+    'frameworks/networkmanager-qt': '@latest-kf6'
+    'libraries/polkit-qt-1': '@latest-kf6'
+    'sdk/selenium-webdriver-at-spi': '@latest-kf6'
