--- a/containmentactions/paste/CMakeLists.txt
+++ b/containmentactions/paste/CMakeLists.txt
@@ -6,6 +6,10 @@ target_link_libraries(plasma_containmentactions_paste
     KF6::KIOCore
 )
 
+set_target_properties(plasma_containmentactions_paste PROPERTIES
+    OUTPUT_NAME org.kde.paste
+)
+
 ecm_qt_declare_logging_category(plasma_containmentactions_paste
     HEADER containmentactions_paste_debug.h
     IDENTIFIER CONTAINMENTACTIONS_PASTE_DEBUG
