--- a/containmentactions/switchwindow/CMakeLists.txt
+++ b/containmentactions/switchwindow/CMakeLists.txt
@@ -8,6 +8,10 @@ ki18n_wrap_ui(switchwindow_SRCS config.ui)
 
 kcoreaddons_add_plugin(plasma_containmentactions_switchwindow SOURCES ${switchwindow_SRCS} INSTALL_NAMESPACE "plasma/containmentactions")
 
+set_target_properties(plasma_containmentactions_switchwindow PROPERTIES
+    OUTPUT_NAME switchwindow
+)
+
 target_link_libraries(plasma_containmentactions_switchwindow
                       Qt::Widgets
                       KF6::Plasma
