Adjust to KNewStuff library changes
The QtQuickDialogWrapper class has been moved.
Also, the KF6::NewStuff target no longer exists, instead NewStuffCore/NewStuffWidgets is used

--- a/components/shellprivate/CMakeLists.txt
+++ b/components/shellprivate/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(plasmashellprivateplugin
         KF6::Plasma
         KF6::PlasmaQuick
         KF6::I18n
-        KF6::NewStuff
+        KF6::NewStuffWidgets
         KF6::KIOFileWidgets
         KF6::WindowSystem
         KF6::Activities
