Add packagekit-qt as third-party dependency

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -67,3 +67,4 @@ Dependencies:
     'frameworks/networkmanager-qt': '@latest-kf6'
     'libraries/polkit-qt-1': '@latest-kf6'
     'sdk/selenium-webdriver-at-spi': '@latest-kf6'
+    'third-party/packagekit-qt': '@latest'
