Port away from undocumented property
adapt to changes in
https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/723

the undocumented property _plasma_graphicsObject is gone away, replaced
by a static method in AppletInterface which also ensures the object
exists. The Plasma session now works as it does on master

--- a/applets/systemtray/CMakeLists.txt
+++ b/applets/systemtray/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(systemtraymodel_static
     KF6::I18n
     KF6::ItemModels
     KF6::Plasma
+    KF6::PlasmaQuick
     KF6::IconThemes
     KF6::WindowSystem
     dbusmenuqt)
