--- a/applets/systemtray/container/CMakeLists.txt
+++ b/applets/systemtray/container/CMakeLists.txt
@@ -17,5 +17,6 @@ target_link_libraries(org.kde.plasma.systemtray
                       Qt::Gui
                       Qt::Quick
                       KF6::Plasma
+                      KF6::PlasmaQuick
                       KF6::XmlGui
                       KF6::I18n)
