Compile against kuserfeedbackqt6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ set_package_properties(KF6QuickCharts PROPERTIES
     TYPE RUNTIME
 )
 
-find_package(KUserFeedback)
+find_package(KUserFeedbackQt6)
 find_package(KSysGuard CONFIG REQUIRED)
 
 find_package(KF6Baloo)
