convert klipper and systray to plasma5Support
there were plasma datanengine usages from C++
left in klipper and the systray applet implementation

--- a/klipper/CMakeLists.txt
+++ b/klipper/CMakeLists.txt
@@ -68,7 +68,7 @@ set(plasma_engine_clipboard_SRCS clipboardengine.cpp clipboardservice.cpp clipbo
 kcoreaddons_add_plugin(plasma_engine_clipboard SOURCES ${plasma_engine_clipboard_SRCS} INSTALL_NAMESPACE "plasma/dataengine")
 target_link_libraries(plasma_engine_clipboard
     libklipper_common_static
-    KF6::Plasma
+    KF6::Plasma5Support
 )
 
 install(FILES org.kde.plasma.clipboard.operations DESTINATION ${PLASMA_DATA_INSTALL_DIR}/services)
